--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pixel Drawing</title>
+  <!-- Windows 98風CSS -->
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
+  <!-- カスタムCSS -->
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -26,6 +28,17 @@
       <input type="file" id="file-load" accept=".json" style="display:none" />
     </section>
   </main>
+
+  <footer style="text-align:center; margin-top:15px; font-size:14px;">
+    <span id="footer-hamusata">
+      &copy; <span id="year-hamusata"></span>
+      <a href="https://home.hamusata.f5.si" target="_blank" rel="noopener noreferrer">@hamusata</a>
+    </span>
+    <span id="footer-hamuzon" style="display:none; margin-left: 8px;">
+      &copy; <span id="year-hamuzon"></span>
+      <a href="https://github.com/Hamuzon" target="_blank" rel="noopener noreferrer">@hamuzon</a>
+    </span>
+  </footer>
 
   <script src="script.js" defer></script>
 </body>
