--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Pixel Drawing</title>
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
   <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="https://home.hamusata.f5.si/icon.svg" type="image/svg+xml" />
 </head>
 <body>
   <main class="window" role="main" aria-label="ピクセルお絵かきアプリ">
