--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Pixel Drawing</title>
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
   <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="https://home.hamusata.f5.si/icon.svg" type="image/svg+xml" />
+  <link rel="icon" href="https://home.hamusata.f5.si/icon.svg" type="image/svg+xml" />
 </head>
 <body>
   <main class="window" role="main" aria-label="ピクセルお絵かきアプリ">
@@ -26,13 +26,53 @@
       <button id="btn-img-save" type="button">画像保存</button>
       <input type="file" id="file-load" accept=".json" style="display:none" />
     </section>
+    
+    <footer style="text-align:center; margin-top:15px; font-size:14px; user-select:none;">
+      <span id="footer-hamusata" style="display:none;">
+        &copy; <span id="year-hamusata"></span> Pixel Drawing. All rights reserved. 
+        <a href="https://home.hamusata.f5.si" target="_blank" rel="noopener noreferrer">@hamusata</a>
+      </span>
+      <span id="footer-hamuzon" style="display:none;">
+        &copy; <span id="year-hamuzon"></span> Pixel Drawing. All rights reserved. 
+        <a href="https://github.com/Hamuzon" target="_blank" rel="noopener noreferrer">@hamuzon</a>
+      </span>
+      <span id="footer-other" style="display:none;">
+        &copy; <span id="year-other"></span> Pixel Drawing. All rights reserved.
+      </span>
+    </footer>
   </main>
 
-  <footer style="text-align:center; margin-top:15px; font-size:14px;">
-    <small id="copyright"></small>
-  </footer>
-
   <script src="script.js" defer></script>
+
+  <script>
+    // ドメインによってフッター表示切り替え＆年表示差し替え
+    (() => {
+      const baseYear = 2025;
+      const currentYear = new Date().getFullYear();
+      const yearDisplay = currentYear > baseYear ? `${baseYear}~${currentYear}` : `${baseYear}`;
+
+      const host = location.hostname.toLowerCase();
+
+      const footerHamusata = document.getElementById("footer-hamusata");
+      const footerHamuzon = document.getElementById("footer-hamuzon");
+      const footerOther = document.getElementById("footer-other");
+
+      const yearHamusata = document.getElementById("year-hamusata");
+      const yearHamuzon = document.getElementById("year-hamuzon");
+      const yearOther = document.getElementById("year-other");
+
+      yearHamusata.textContent = yearDisplay;
+      yearHamuzon.textContent = yearDisplay;
+      yearOther.textContent = yearDisplay;
+
+      if(host === "pixel-art.hamusata.f5.si" || host === "home.hamusata.f5.si"){
+        footerHamusata.style.display = "inline";
+      } else if(host === "hamuzon.github.io"){
+        footerHamuzon.style.display = "inline";
+      } else {
+        footerOther.style.display = "inline";
+      }
+    })();
   </script>
 </body>
 </html>
