--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button id="btn-img-save" type="button">画像保存</button>
       <input type="file" id="file-load" accept=".json" style="display:none" />
     </section>
-    
+
     <footer style="text-align:center; margin-top:15px; font-size:14px; user-select:none;">
       <span id="footer-hamusata" style="display:none;">
         &copy; <span id="year-hamusata"></span> Pixel Drawing. All rights reserved. 
@@ -34,7 +34,7 @@
       </span>
       <span id="footer-hamuzon" style="display:none;">
         &copy; <span id="year-hamuzon"></span> Pixel Drawing. All rights reserved. 
-        <a href="https://github.com/Hamuzon" target="_blank" rel="noopener noreferrer">@hamuzon</a>
+        <a id="link-hamuzon" href="https://github.com/Hamuzon" target="_blank" rel="noopener noreferrer">@hamuzon</a>
       </span>
       <span id="footer-other" style="display:none;">
         &copy; <span id="year-other"></span> Pixel Drawing. All rights reserved.
@@ -43,36 +43,6 @@
   </main>
 
   <script src="script.js" defer></script>
-
-  <script>
-    // ドメインによってフッター表示切り替え＆年表示差し替え
-    (() => {
-      const baseYear = 2025;
-      const currentYear = new Date().getFullYear();
-      const yearDisplay = currentYear > baseYear ? `${baseYear}~${currentYear}` : `${baseYear}`;
-
-      const host = location.hostname.toLowerCase();
-
-      const footerHamusata = document.getElementById("footer-hamusata");
-      const footerHamuzon = document.getElementById("footer-hamuzon");
-      const footerOther = document.getElementById("footer-other");
-
-      const yearHamusata = document.getElementById("year-hamusata");
-      const yearHamuzon = document.getElementById("year-hamuzon");
-      const yearOther = document.getElementById("year-other");
-
-      yearHamusata.textContent = yearDisplay;
-      yearHamuzon.textContent = yearDisplay;
-      yearOther.textContent = yearDisplay;
-
-      if(host === "pixel-art.hamusata.f5.si" || host === "home.hamusata.f5.si"){
-        footerHamusata.style.display = "inline";
-      } else if(host === "hamuzon.github.io"){
-        footerHamuzon.style.display = "inline";
-      } else {
-        footerOther.style.display = "inline";
-      }
-    })();
-  </script>
+  <script src="footer-switch.js" defer></script>
 </body>
 </html>
