--- a/index.html
+++ b/index.html
@@ -5,11 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pixel Drawing</title>
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
-  <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="https://home.hamusata.f5.si/icon.svg" type="image/svg+xml" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+    }
+
+    #app-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      align-items: flex-start;
+      margin-top: 20px;
+    }
+
+    #palette {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 5px;
+      max-width: 100%;
+    }
+
+    #btn-add-color {
+      margin-top: 10px;
+    }
+
+    #canvas {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(20px, 1fr));
+      gap: 1px;
+      width: 100%;
+      max-width: 500px;
+      aspect-ratio: 1 / 1;
+    }
+
+    #controls {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 20px;
+    }
+
+    @media (max-width: 600px) {
+      #canvas {
+        max-width: 90%;
+      }
+
+      #app-container {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+
+    #titleContainer {
+      text-align: center;
+      margin-top: 10px;
+    }
+
+    #titleInput {
+      width: 80%;
+      max-width: 300px;
+      padding: 5px;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 14px;
+      user-select: none;
+    }
+  </style>
 </head>
 <body>
   <main class="window" role="main" aria-label="ピクセルお絵かきアプリ">
+
     <h1>Pixel Drawing</h1>
 
     <div id="titleContainer">
@@ -18,34 +90,45 @@
     </div>
 
     <section id="app-container" aria-label="描画エリアとパレット">
+
       <nav id="palette" role="list" aria-label="色パレット"></nav>
-      <!-- ★ 色追加ボタンを設置 -->
+
       <button id="btn-add-color" type="button">色を追加</button>
 
       <div id="canvas" role="grid" aria-label="ピクセル描画キャンバス" tabindex="0"></div>
+
     </section>
 
     <section id="controls" aria-label="操作ボタン">
+
       <button id="btn-reset" type="button">ボードをリセット</button>
+
       <button id="btn-save" type="button">JSONで保存</button>
+
       <button id="btn-load" type="button">JSON読み込み</button>
+
       <button id="btn-img-save" type="button">画像保存</button>
+
       <input type="file" id="file-load" accept=".json" style="display:none" />
+
     </section>
 
-    <footer style="text-align:center; margin-top:15px; font-size:14px; user-select:none;">
+    <footer>
       <span id="footer-hamusata" style="display:none;">
-        &copy; <span id="year-hamusata"></span> Pixel Drawing. All rights reserved. 
+        &copy; <span id="year-hamusata"></span> Pixel Drawing. All rights reserved.
         <a href="https://home.hamusata.f5.si" target="_blank" rel="noopener noreferrer">@hamusata</a>
       </span>
+
       <span id="footer-hamuzon" style="display:none;">
-        &copy; <span id="year-hamuzon"></span> Pixel Drawing. All rights reserved. 
+        &copy; <span id="year-hamuzon"></span> Pixel Drawing. All rights reserved.
         <a id="link-hamuzon" href="https://github.com/Hamuzon" target="_blank" rel="noopener noreferrer">@hamuzon</a>
       </span>
+
       <span id="footer-other" style="display:none;">
         &copy; <span id="year-other"></span> Pixel Drawing. All rights reserved.
       </span>
     </footer>
+
   </main>
 
   <script src="script.js" defer></script>
