--- a/index.html
+++ b/index.html
@@ -5,79 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Pixel Drawing</title>
   <link rel="stylesheet" href="https://unpkg.com/98.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="https://home.hamusata.f5.si/icon.svg" type="image/svg+xml" />
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-    }
-
-    #app-container {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-      align-items: flex-start;
-      margin-top: 20px;
-    }
-
-    #palette {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 5px;
-      max-width: 100%;
-    }
-
-    #btn-add-color {
-      margin-top: 10px;
-    }
-
-    #canvas {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(20px, 1fr));
-      gap: 1px;
-      width: 100%;
-      max-width: 500px;
-      aspect-ratio: 1 / 1;
-    }
-
-    #controls {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-      margin-top: 20px;
-    }
-
-    @media (max-width: 600px) {
-      #canvas {
-        max-width: 90%;
-      }
-
-      #app-container {
-        flex-direction: column;
-        align-items: center;
-      }
-    }
-
-    #titleContainer {
-      text-align: center;
-      margin-top: 10px;
-    }
-
-    #titleInput {
-      width: 80%;
-      max-width: 300px;
-      padding: 5px;
-    }
-
-    footer {
-      text-align: center;
-      margin-top: 15px;
-      font-size: 14px;
-      user-select: none;
-    }
-  </style>
 </head>
 <body>
   <main class="window" role="main" aria-label="ピクセルお絵かきアプリ">
