--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
 
     <section id="app-container" aria-label="描画エリアとパレット">
 
+      <!-- 🎨 パレット領域 -->
       <nav id="palette" role="list" aria-label="色パレット"></nav>
 
+      <!-- ➕ 色追加ボタン -->
       <button id="btn-add-color" type="button">色を追加</button>
 
+      <!-- 🖌️ キャンバス -->
       <div id="canvas" role="grid" aria-label="ピクセル描画キャンバス" tabindex="0"></div>
 
     </section>
@@ -31,13 +34,11 @@
     <section id="controls" aria-label="操作ボタン">
 
       <button id="btn-reset" type="button">ボードをリセット</button>
-
       <button id="btn-save" type="button">JSONで保存</button>
-
       <button id="btn-load" type="button">JSON読み込み</button>
-
       <button id="btn-img-save" type="button">画像保存</button>
 
+      <!-- 📂 ファイル選択は非表示 -->
       <input type="file" id="file-load" accept=".json" style="display:none" />
 
     </section>
