--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -64,6 +64,7 @@
 
   </main>
 
+  <!-- v2.0 JS を読み込む -->
   <script src="script.js" defer></script>
   <script src="footer-switch.js" defer></script>
 </body>
