--- a/Canvas/index.html
+++ b/Canvas/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-<title>Canvas App Ink API Full</title>
+<title>Canvas App</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" rel="stylesheet">
 <style>
 :root{--bg:#050505;--panel:rgba(22,22,24,0.85);--text:#fff;--sub:#8e8e93;--border:rgba(255,255,255,0.12);--accent:#007aff;--input:#1c1c1e;--hover:rgba(255,255,255,0.1);}
@@ -167,3 +167,4 @@ window.onresize=()=>app.fit();
 
 </body>
 </html>
+
